--- a/practice/src/assets/css/style.css
+++ b/practice/src/assets/css/style.css
@@ -8,3 +8,16 @@
 .btn {
   @apply rounded py-1 px-3 cursor-pointer;
 }
+
+.pagination_default {
+  @apply flex items-center px-4 py-2 mx-1 bg-green-200 rounded-md;
+}
+.pagination_disable {
+  @apply flex items-center px-4 py-2 mx-1 bg-red-200 rounded-md cursor-not-allowed;
+}
+.pagination_not_active {
+  @apply text-gray-700 transition-colors duration-200 transform hover:bg-green-500 hover:text-white;
+}
+.pagination_active {
+  @apply bg-green-900 text-white;
+}
